# metw-accounts-center

./: .env.example  Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
app/: Cargo.toml  all.html  fn.app.html  index.html  struct.ApiDoc.html
app/middleware/: fn.auth_email_verification_session.html  fn.auth_session.html  index.html  sidebar-items.js  struct.ApiDocSecurityAddon.html
app/res/: enum.AppError.html  index.html  struct.AppJson.html  type.AppMiddlewareResult.html  type.AppResult.html
app/routes/: index.html
app/routes/authentication/: fn.routes.html  index.html  struct.ApiDoc.html
app/routes/authorization/: fn.routes.html  index.html  struct.ApiDoc.html
app/routes/email_verification_session/: fn.routes.html  index.html  struct.ApiDoc.html
app/routes/session/: fn.routes.html  index.html  struct.ApiDoc.html
app/src/: lib.rs  main.rs  middleware.rs  res.rs
app/src/routes/: authentication.rs  authorization.rs  mod.rs  pending_activation_session.rs  session.rs
service/: Cargo.toml  README.md  all.html  fn.checked_now.html  index.html  sidebar-items.js  struct.AppState.html  struct.State.html
service/client/: index.html  sidebar-items.js  trait.CaptchaClient.html  trait.EmailClient.html  trait.MailClient.html
service/client/mock/: index.html  sidebar-items.js  struct.MockCaptchaClientImpl.html  struct.MockEmailClientImpl.html  struct.MockMailClientImpl.html  type.Emails.html
service/dto/: index.html  sidebar-items.js
service/dto/repo/: enum.EmailLimitingResult.html  index.html  sidebar-items.js  struct.Keys.html  struct.Login.html  struct.OwnedKeys.html  struct.OwnedLoginCredentials.html
service/dto/request/: index.html  sidebar-items.js  struct.Email.html  struct.KeyRoll.html  struct.Keys.html  struct.LoginWithEmail.html  struct.LoginWithUsername.html  struct.Signup.html  struct.Token.html
service/dto/response/: index.html  sidebar-items.js  struct.Account.html  struct.Keys.html  struct.Token.html
service/dto/service/: index.html  struct.Login.html
service/entity/: index.html  struct.Account.html  struct.AccountFlags.html  struct.Email.html  struct.Username.html
service/handlers/: enum.HandlerError.html  index.html  sidebar-items.js  struct.AuthenticationHandler.html  struct.AuthorizationHandler.html  struct.EmailVerificationSessionHandler.html  struct.PersonalHandler.html  struct.SessionHandler.html  type.HandlerResult.html
service/handlers/personal/: struct.PersonalHandler.html
service/repo/: enum.RepoError.html  index.html  sidebar-items.js  trait.AccountRepo.html  trait.AccountRepoTransaction.html  trait.EmailLimitingRepo.html  trait.TokenRepo.html  type.RepoResult.html
service/repo/mock/: index.html  sidebar-items.js  struct.MockAccountRepoImpl.html  struct.MockEmailLimitingRepoImpl.html  struct.MockTokenRepoImpl.html
service/service/: enum.ServiceError.html  index.html  sidebar-items.js  struct.AccountService.html  struct.TokenService.html  type.ServiceResult.html
service/src/: entity.rs  lib.rs  state.rs  testutil.rs
service/src/client/: mock.rs  mod.rs
service/src/dto/: repo.rs  request.rs  response.rs  service.rs
service/src/handlers/: authentication.rs  authorization.rs  error.rs  pending_activation_session.rs  personal.rs  session.rs  tests.rs
service/src/repo/: error.rs  mock.rs  mod.rs
service/src/service/: account.rs  error.rs  mod.rs  tests.rs  token.rs
service/src/util/: checked_now.rs  id.rs  jsonwebsignature.rs  mails.rs  mod.rs  (+2 more)
service/state/: struct.State.html
service/testutil/: fn.random_email.html  fn.random_ipv6.html  fn.random_username.html  index.html  sidebar-items.js  struct.TestCtx.html
service/util/: index.html  sidebar-items.js  struct.JsonWebSignature.html
state/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.AccountRepoImpl.html  struct.CaptchaClientImpl.html  struct.Config.html  struct.EmailClientImpl.html  struct.EmailLimitingRepoImpl.html  struct.MailClientImpl.html  struct.TokenRepoImpl.html
state/examples/: amazon-sesv2.rs
state/mail_client/: struct.MailClientImpl.html
state/migrations/: 0001_init.sql
state/src/: account_repo.rs  captcha_client.rs  lib.rs  token_repo.rs
(+327 files in other folders)
