[package]
name = "service"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "macros", "sync"] }
async-trait = { workspace = true }

sqlx = { workspace = true, features = ["postgres", "chrono"]}
chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

pastey = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }

validator = { workspace = true, features = ["derive"] }
regex = { workspace = true }
serde = { workspace = true }

# Service-specific encryption/signature utility
biscuit = "0.8"
argon2 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

serial_test = { workspace = true }
test-log = { workspace = true, features = ["trace"] }

futures-util = { workspace = true }

service = { path = ".", features = ["mock"] }

[features]
mock = []
