[package]
name = "state"
version = "0.0.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }

sqlx = { workspace = true, features = ["postgres", "chrono", "macros", "runtime-tokio"] }
redis = { workspace = true, features = ["aio", "tokio-comp"] }

dotenvy = { workspace = true }

tracing = { workspace = true }

service = { path = "../service/" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

test-log = { workspace = true, features = ["trace"] }

service = { path = "../service/", features = ["mock", "testutil"] }

[lints]
workspace = true
